--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "next": "10.0.3",
+    "next-auth": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.1.18",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
