--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "10.0.3",
     "next-auth": "^3.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.30.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.1.18",
